Minor (mostly aesthetic) changes.

--- a/css/main.css
+++ b/css/main.css
@@ -133,18 +133,47 @@ code {
   position: fixed;
   top: 35%;
   font-size: 72pt;
+  font-weight: bolder;
   transform: rotate(-17deg);
-  left: -4%;
+  left: -1%;
   text-align: center;
-  text-shadow: 5px 5px #ecc;
+  /*text-shadow: 5px 5px #ecc;*/
+  text-shadow: 1pt 1pt rgba(255,255,255,0.2);
   color: pink;
+  /*  fallback rainbow image */
+
+  /*mozilla rainbow gradient*/
+  background-image: -moz-linear-gradient( left top, right bottom ,
+  from(red),
+  color-stop(16%, orange),
+  color-stop(32%, yellow),
+  color-stop(48%, green),
+  color-stop(60%, blue),
+  color-stop(76%, indigo),
+  to(violet));
+
+  /*webkit rainbow gradient*/
+  background-image: -webkit-gradient(linear,  left top,  left bottom,
+  color-stop(0.00, red),
+  color-stop(16%, orange),
+  color-stop(32%, yellow),
+  color-stop(48%, green),
+  color-stop(60%, blue),
+  color-stop(76%, indigo),
+  color-stop(1.00, violet));
+
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
 }
 
+
+
 .dibideedibideedibidee {
-    text-align: center;
-    margin-top: -2%;
-    font-family: cursive;
-    font-weight: bolder;
-    font-size: 144pt;
-    transform: rotate(-7deg);
+  text-align: center;
+  margin-top: -2%;
+  font-family: cursive;
+  font-weight: bolder;
+  font-size: 144pt;
+  transform: rotate(-7deg);
 }
